--- a/VaccineC/src/app/pages/gerenciar-usuarios/usuarios-cadastro/usuarios-cadastro.component.html
+++ b/VaccineC/src/app/pages/gerenciar-usuarios/usuarios-cadastro/usuarios-cadastro.component.html
@@ -11,6 +11,7 @@
               {{option}}
             </mat-option>
           </mat-autocomplete>
+          <mat-icon matSuffix>search</mat-icon>
         </mat-form-field>
       </div>
 
