--- a/VaccineC/src/app/pages/login/login.component.html
+++ b/VaccineC/src/app/pages/login/login.component.html
@@ -23,11 +23,11 @@
                                             <div class="form-group">
                                                 <input type="email" formControlName="email" class="form-control form-control-user"
                                                     id="exampleInputEmail" aria-describedby="emailHelp"
-                                                    placeholder="Digite seu e-mail">
+                                                    placeholder="Digite seu e-mail" [(ngModel)]="exampleInputEmail">
                                             </div>
                                             <div class="form-group">
                                                 <input type="password" formControlName="password" class="form-control form-control-user"
-                                                    id="exampleInputPassword" placeholder="Digite sua senha">
+                                                    id="exampleInputPassword" placeholder="Digite sua senha" [(ngModel)]="exampleInputPassword">
                                             </div>
                                             <div class="form-group">
                                                 <div class="custom-control custom-checkbox small">
