--- a/VaccineC/src/app/pages/visao-faturamento/visao-faturamento-pesquisa/visao-faturamento-pesquisa.component.html
+++ b/VaccineC/src/app/pages/visao-faturamento/visao-faturamento-pesquisa/visao-faturamento-pesquisa.component.html
@@ -2,7 +2,7 @@
   <div>
     <mat-form-field class="margin-form" appearance="fill" style="font-size:14px">
       <mat-label>Selecione o ano</mat-label>
-      <mat-select id="year" required="true">
+      <mat-select id="year">
         <mat-option value="2022">2022</mat-option>
         <mat-option value="2019">2021</mat-option>
       </mat-select>
