--- a/VaccineC/src/app/shared/components/toolbar/toolbar.component.html
+++ b/VaccineC/src/app/shared/components/toolbar/toolbar.component.html
@@ -51,7 +51,7 @@
                 <h6 class="dropdown-header">
                     Central de Notificações
                 </h6>
-                <a class="dropdown-item d-flex align-items-center" href="#">
+                <a class="dropdown-item d-flex align-items-center" href="/situacao-estoque">
                     <div class="mr-3">
                         <div class="icon-circle bg-warning">
                             <i class="fas fa-triangle-exclamation text-white notification-icon"></i>
@@ -63,7 +63,7 @@
                             25/08/2022!</span>
                     </div>
                 </a>
-                <a class="dropdown-item d-flex align-items-center" href="#">
+                <a class="dropdown-item d-flex align-items-center" href="/situacao-estoque">
                     <div class="mr-3">
                         <div class="icon-circle bg-danger">
                             <i class="fas fa-radiation text-white notification-icon"></i>
