--- a/VaccineC/src/app/pages/minha-conta/minha-conta.component.html
+++ b/VaccineC/src/app/pages/minha-conta/minha-conta.component.html
@@ -10,12 +10,9 @@
                             <img src="../../../assets/img/bg-profile-default.png" alt="avatar"
                                 class="rounded-circle img-fluid" style="width: 150px;">
                             <h5 class="my-3 text-gray-800">John Doe</h5>
-                            <p class="text-muted mb-1">john.doe@empresa.com</p>
-                            <p class="text-muted mb-4">Enfermeiro</p>
+                            <p class="text-muted mb-4">john.doe@empresa.com</p>
                             <div class="d-flex justify-content-center mb-2">
-                                <button mat-raised-button color="primary" class="me-2">Senha</button>
-                                <button mat-raised-button>Cadastro</button>
-                            </div>
+                                <button mat-raised-button color="primary" (click)="openPasswordDialog()" >Alterar Senha</button>                            </div>
                         </div>
                     </div>
                 </div>
