--- a/VaccineC/src/app/pages/gerenciar-usuarios/usuarios-pesquisa/usuarios-pesquisa.component.html
+++ b/VaccineC/src/app/pages/gerenciar-usuarios/usuarios-pesquisa/usuarios-pesquisa.component.html
@@ -1,6 +1,6 @@
 <div class="search-group">
-  <div class="col-sm-11 p-0">
-    <mat-form-field class="search-form-field col-sm-10" appearance="fill">
+  <div class="col-sm-11 p-0 d-flex">
+    <mat-form-field class="search-form-field col-sm-10" appearance="outline">
       <mat-label>Digite o e-mail do usuário ou o nome da pessoa</mat-label>
       <input id="organicSearch" matInput type="text" [(ngModel)]="value" placeholder="(mínimo 3 caracteres)">
       <button *ngIf="value" matSuffix mat-icon-button aria-label="Clear" (click)="value=''">
