--- a/VaccineC/src/app/pages/orcamentos/orcamento-cadastro/orcamento-cadastro.component.scss
+++ b/VaccineC/src/app/pages/orcamentos/orcamento-cadastro/orcamento-cadastro.component.scss
@@ -1,13 +1,18 @@
-.search-group {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+.example-stepper {
     font-size: 14px;
-    margin-bottom: 2rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
 }
 
-#search-table {
+:host ::ng-deep .mat-horizontal-stepper-header-container {
+    height: 3rem;
+}
+
+:host ::ng-deep .mat-step-header {
+    height: 3rem;
+}
+
+.search-table {
     display: flex;
     justify-content: center;
     overflow-x: initial;
@@ -20,11 +25,9 @@
     box-shadow: 0px 3px 3px -2px rgb(0 0 0 / 10%), 0px 3px 4px 0px rgb(0 0 0 / 10%), 0px 1px 8px 0px rgb(0 0 0 / 10%);
 }
 
-:host ::ng-deep .mat-form-field-wrapper {
-    padding: 0px;
-}
-
-#mat-search-button {
-    margin-bottom: 0px;
-    align-self: center;
+.values {
+    font-size: 20px;
+    margin-bottom: 0.75rem;
+    margin-top: 2rem;
+    margin-left: 0.75rem;
 }
