--- a/VaccineC/src/app/pages/pessoas/pessoas-pesquisa/pessoas-pesquisa.component.scss
+++ b/VaccineC/src/app/pages/pessoas/pessoas-pesquisa/pessoas-pesquisa.component.scss
@@ -4,6 +4,7 @@
     justify-content: center;
     align-items: center;
     font-size: 14px;
+    margin-bottom: 2rem;
 }
 
 #search-table {
@@ -17,4 +18,13 @@
 :host ::ng-deep .mat-table {
     border-radius: 0.75rem;
     box-shadow: 0px 3px 3px -2px rgb(0 0 0 / 10%), 0px 3px 4px 0px rgb(0 0 0 / 10%), 0px 1px 8px 0px rgb(0 0 0 / 10%);
+}
+
+:host ::ng-deep .mat-form-field-wrapper {
+    padding: 0px;
+}
+
+#mat-search-button {
+    margin-bottom: 0px;
+    align-self: center;
 }
