--- a/VaccineC/src/app/pages/agendamento/agendamento.component.html
+++ b/VaccineC/src/app/pages/agendamento/agendamento.component.html
@@ -2,5 +2,8 @@
     <app-side-menu></app-side-menu>
     <div id="content-wrapper" class="d-flex flex-column">
         <app-toolbar></app-toolbar>
+        <app-container containerTitle="Agendamento" containerPath="Operacional">
+            <full-calendar [options]='calendarOptions'></full-calendar> 
+        </app-container>
     </div>
 </div>
