--- a/VaccineC/src/app/pages/pessoas/pessoas-complemento/pessoas-complemento.component.html
+++ b/VaccineC/src/app/pages/pessoas/pessoas-complemento/pessoas-complemento.component.html
@@ -1,18 +1,17 @@
 <form>
     <div class="complement-group">
-        <div class="offset-sm-1 col-sm-11 p-0">
+        <div class="offset-sm-1 col-sm-11 p-0" id="person-physical">
             <div class="div-row-input">
-
                 <div class="div-row-input">
                     <mat-form-field appearance="fill" class="col-sm-6">
                         <mat-label>CPF</mat-label>
-                        <input type="number" matInput #input maxlength="11" placeholder="000.000.000-00" id="cpfNumber"
-                            required="true">
+                        <input type="text" matInput #input maxlength="14" id="cpfNumber" required="true"
+                            mask="000.000.000-009" placeholder="000.000.000-00">
                     </mat-form-field>
                     <mat-form-field appearance="fill" class="col-sm-5 ml-0">
                         <mat-label>CNS</mat-label>
-                        <input type="number" matInput #input maxlength="15" placeholder="000 0000 0000 0000"
-                            id="cnsNumber">
+                        <input type="text" matInput #input maxlength="18" placeholder="000 0000 0000 0000"
+                            id="cnsNumber" mask="000 0000 0000 00009">
                     </mat-form-field>
                 </div>
 
@@ -41,7 +40,7 @@
             <div class="div-row-input">
                 <mat-form-field appearance="fill" class="col-sm-6">
                     <mat-label>Data de Óbito</mat-label>
-                    <input matInput [matDatepicker]="picker2" id="deathDate">
+                    <input matInput [matDatepicker]="picker2" id="deathDate" ng-model="cad.deathDate" mask="00/00/0009">
                     <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
                     <mat-datepicker #picker2></mat-datepicker>
                 </mat-form-field>
@@ -50,6 +49,25 @@
                 <button mat-raised-button color="primary">Salvar</button>
             </div>
 
+        </div>
+        <div class="offset-sm-1 col-sm-11 p-0 d-none" id="person-juridical">
+            <div class="div-row-input">
+                <mat-form-field appearance="fill" class="col-sm-12">
+                    <mat-label>Nome Fantasia</mat-label>
+                    <input type="text" matInput #input maxlength="255" id="fantasyName">
+                </mat-form-field>
+            </div>
+            <div class="div-row-input">
+                <mat-form-field appearance="fill" class="col-sm-12">
+                    <mat-label>CNPJ</mat-label>
+                    <input type="text" matInput #input maxlength="18" id="cnpjNumber" required="true"
+                        mask="00.000.000/0000-00" placeholder="00.000.000/0000-00">
+                </mat-form-field>
+            </div>
+
+            <div class="div-row-input complement-button-row">
+                <button mat-raised-button color="primary">Salvar</button>
+            </div>
         </div>
     </div>
 </form>
