--- a/VaccineC/src/app/pages/produto/produto-cadastro/produto-cadastro.component.html
+++ b/VaccineC/src/app/pages/produto/produto-cadastro/produto-cadastro.component.html
@@ -42,7 +42,7 @@
                 <mat-form-field appearance="fill" floatLabel="always" class="col-sm-4">
                     <mat-label>Valor de Venda</mat-label>
                     <input matInput type="text" class="example-right-align" placeholder="0,00" id="saleValue"
-                        required="true">
+                        required="true"  mask="separator.2" [thousandSeparator]="'.'" [decimalMarker]="','">
                     <span matPrefix>R$&nbsp;</span>
                 </mat-form-field>
             </div>
