--- a/VaccineC/src/app/pages/login/login.component.html
+++ b/VaccineC/src/app/pages/login/login.component.html
@@ -22,12 +22,12 @@
                                         <form [formGroup]="loginForm" class="user">
                                             <div class="form-group">
                                                 <input type="email" formControlName="email" class="form-control form-control-user"
-                                                    id="exampleInputEmail" aria-describedby="emailHelp"
-                                                    placeholder="Digite seu e-mail" [(ngModel)]="exampleInputEmail">
+                                                    id="userEmail" aria-describedby="emailHelp"
+                                                    placeholder="Digite seu e-mail" [(ngModel)]="userEmail">
                                             </div>
                                             <div class="form-group">
                                                 <input type="password" formControlName="password" class="form-control form-control-user"
-                                                    id="exampleInputPassword" placeholder="Digite sua senha" [(ngModel)]="exampleInputPassword">
+                                                    id="userPassword" placeholder="Digite sua senha" [(ngModel)]="userPassword">
                                             </div>
                                             <div class="form-group">
                                                 <div class="custom-control custom-checkbox small">
@@ -35,7 +35,7 @@
                                                         id="customCheck">
                                                 </div>
                                             </div>
-                                            <a href="/home" (click)="validateLogin()" class="btn btn-primary btn-user btn-block">
+                                            <a (click)="validateLogin()" class="btn btn-primary btn-user btn-block">
                                                 ENTRAR
                                             </a>
 
