--- a/VaccineC/src/app/pages/pessoas/pessoas-cadastro/pessoas-cadastro.component.html
+++ b/VaccineC/src/app/pages/pessoas/pessoas-cadastro/pessoas-cadastro.component.html
@@ -49,10 +49,9 @@
             </div>
 
             <div class="div-row-input registration-button-row">
-                <button mat-raised-button color="primary">Salvar</button>
-                <button mat-raised-button color="warn">Excluir</button>
+                <button mat-raised-button color="primary"><span class="fa-solid fa-floppy-disk me-2"></span><span>Salvar</span></button>
+                <button mat-raised-button color="warn"><span class="fa-solid fa-trash me-2"></span><span>Excluir</span></button>
             </div>
-
         </div>
     </div>
 </form>
